# GB_CPP_DIFFICULT_MOMENTS

./: README.md
Homework_01/: CMakeLists.txt  README.md  main.cpp
Homework_02/: CMakeLists.txt  README.md  main.cpp
Homework_03/: CMakeLists.txt  README.md  main.cpp
Homework_04/: CMakeLists.txt  README.md  main.cpp
Homework_05/: CMakeLists.txt  README.md  main.cpp
Homework_06/: README.md  main.cpp
Homework_07/: CMakeLists.txt  MyNamespace.h  README.md  main.cpp
Homework_08/: CMakeLists.txt  PhoneBook.txt  README.md  main.cpp
